5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1630_2922.log
== TEST (2019-04-02 16:31:10) 
-- CODE:
m = float(input("tempo de investimento:"))
acum = 1042000
inic = 1500
taxa = acum/inic**(1/y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    taxa = acum/inic**(1/y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:28) 
-- CODE:
m = float(input("tempo de investimento:"))
acum = 1042000
inic = 1500
x = acum/inic
taxa = x**(1/m)
i = taxa-1

print(round(i, 5))
-- OUTPUT:
0.07541
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:33:38) 
-- CODE:
m = float(input("tempo de investimento:"))
acum = 1042000
inic = 1500
x = acum/inic
taxa = x**(1/m)
i = taxa-1

print(round(i, 5))
-- EXECUTION TIME:
0.153066
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
0.07541
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
0.06833
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
0.05557
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
